syntax = "proto3";

package hasadna.noloan2;

import "COURT.proto";
import "SMS.proto";

option java_package = "hasadna.noloan2.protobuf";
option java_outer_classname = "LawsuitProto";

message Lawsuit {
    string firstName = 1;
    string lastName = 2;
    string userId = 3;
    string userAddress = 4;
    string userPhone = 5;
    string userFax = 6;

    string companyName = 7;
    string companyId = 8;
    string companyAddress = 9;
    string companyPhone = 10;
    string companyFax = 11;

    string dateReceived = 12;
    string claimAmount = 13;
    bool sentHaser = 14;
    bool moreThanFiveClaims = 15;

    SmsMessage smsMessage = 16;

}



